небольшой рефакторинг кода, а также добавил асинхронность в контроллер

--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Model\" />
     <Folder Include="Resources\" />
     <Folder Include="View\Pages\" />
+    <Folder Include="Command\" />
   </ItemGroup>
 
   <ItemGroup>
