--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -8,13 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="Resources\" />
-    <Folder Include="View\Pages\" />
     <Folder Include="Command\" />
+    <Folder Include="Model\" />
+    <Folder Include="Resources\Styles\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GlobalHotKeys.Windows" Version="0.1.0" />
+    <PackageReference Include="HandyControl" Version="3.4.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
