--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ScreenRecognition.ImagePreparation\ScreenRecognition.ImagePreparation.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ScreenRecognition.ImagePreparation">
       <HintPath>..\ScreenRecognition.ImagePreparation\bin\Debug\net6.0\ScreenRecognition.ImagePreparation.dll</HintPath>
     </Reference>
