--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\TestHelloWorldImage.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Resources\Icons\icon.ico" />
   </ItemGroup>
 
@@ -26,6 +30,10 @@
     <Reference Include="ScreenRecognition.ImagePreparation">
       <HintPath>..\ScreenRecognition.ImagePreparation\bin\Debug\net6.0\ScreenRecognition.ImagePreparation.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\testHelloWorldImage.png" />
   </ItemGroup>
 
 </Project>
