--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -27,12 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ScreenRecognition.ImagePreparation">
-      <HintPath>..\ScreenRecognition.ImagePreparation\bin\Debug\net6.0\ScreenRecognition.ImagePreparation.dll</HintPath>
-    </Reference>
-    <Reference Include="ScreenRecognition.Modules">
-      <HintPath>..\ScreenRecognition.Modules\bin\Debug\net6.0\ScreenRecognition.Modules.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\ScreenRecognition.ImagePreparation\ScreenRecognition.ImagePreparation.csproj" />
+    <ProjectReference Include="..\ScreenRecognition.Modules\ScreenRecognition.Modules.csproj" />
   </ItemGroup>
 
   <ItemGroup>
