практически полностью гтова страница настроек программы (по визуалу), нужно доделать настройки профиля (скорее всего просто убрать возможность изменения параметров и всё), а также сделать настройки рабочими, чтобы она на что-то влияли)

--- a/ScreenRecognition.Desktop/App.config
+++ b/ScreenRecognition.Desktop/App.config
@@ -41,6 +41,9 @@
             <setting name="HotkeyKey" serializeAs="String">
                 <value>KEY_Q</value>
             </setting>
+            <setting name="T9EnableStatus" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ScreenRecognition.Desktop.Properties.ProgramSettings>
         <ScreenRecognition.Desktop.Properties.Settings>
             <setting name="OcrLanguages" serializeAs="String">
