--- a/ScreenRecognition.Desktop/App.config
+++ b/ScreenRecognition.Desktop/App.config
@@ -12,7 +12,7 @@
                 <value>eng_rus</value>
             </setting>
             <setting name="TranslatorLanguage" serializeAs="String">
-                <value>rus_eng</value>
+                <value>eng</value>
             </setting>
             <setting name="OcrName" serializeAs="String">
                 <value>TesseractOcr</value>
