--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -13,13 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Icons\icon.ico" />
+    <Resource Include="Resources\Icons\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="GlobalHotKeys.Windows" Version="0.1.0" />
     <PackageReference Include="HandyControl" Version="3.4.0" />
     <PackageReference Include="HandyControl.Lang.ru" Version="3.4.0" />
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
