--- a/ScreenRecognition.Api/ScreenRecognition.Api.csproj
+++ b/ScreenRecognition.Api/ScreenRecognition.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.1" />
     <PackageReference Include="Google.Cloud.Translate.V3" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
@@ -26,6 +27,9 @@
 
   <ItemGroup>
     <None Update="Resources\Tessdata\eng.traineddata">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Tessdata\jpn.traineddata">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Tessdata\kor.traineddata">
