добавлена возможность смены адреса апи

--- a/ScreenRecognition.Desktop/App.config
+++ b/ScreenRecognition.Desktop/App.config
@@ -44,6 +44,9 @@
             <setting name="T9EnableStatus" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ApiServerAddress" serializeAs="String">
+                <value>http://localhost:5046/api/</value>
+            </setting>
         </ScreenRecognition.Desktop.Properties.ProgramSettings>
         <ScreenRecognition.Desktop.Properties.Settings>
             <setting name="OcrLanguages" serializeAs="String">
