--- a/ScreenRecognition.Desktop/Properties/ProgramSettings.settings
+++ b/ScreenRecognition.Desktop/Properties/ProgramSettings.settings
@@ -38,5 +38,8 @@
     <Setting Name="T9EnableStatus" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ApiServerAddress" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://localhost:5046/api/</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
