--- a/ScreenRecognition.Desktop/App.config
+++ b/ScreenRecognition.Desktop/App.config
@@ -9,16 +9,16 @@
     <userSettings>
         <ScreenRecognition.Desktop.Properties.ProgramSettings>
             <setting name="OcrLanguages" serializeAs="String">
-                <value>eng_rus</value>
+                <value>English</value>
             </setting>
             <setting name="TranslatorLanguage" serializeAs="String">
-                <value>eng</value>
+                <value>Russian</value>
             </setting>
             <setting name="OcrName" serializeAs="String">
-                <value>TesseractOcr</value>
+                <value>TesseractOCR</value>
             </setting>
             <setting name="TranslatorName" serializeAs="String">
-                <value>MyMemoryTextTranslator</value>
+                <value>MyMemory</value>
             </setting>
             <setting name="TranslatorApiKey" serializeAs="String">
                 <value>nothing</value>
@@ -33,7 +33,7 @@
                 <value>False</value>
             </setting>
             <setting name="HotkeyEnabledStatus" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="HotkeyModifier" serializeAs="String">
                 <value>Control</value>
