added auto check of server availability

--- a/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
+++ b/ScreenRecognition.Desktop/ScreenRecognition.Desktop.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<ApplicationIcon>Resources\Icons\icon.ico</ApplicationIcon>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
