standard connection string to db

--- a/ScreenRecognition.Desktop/App.config
+++ b/ScreenRecognition.Desktop/App.config
@@ -45,7 +45,7 @@
                 <value>False</value>
             </setting>
             <setting name="ApiServerAddress" serializeAs="String">
-                <value>http://localhost:5046/api/</value>
+                <value>http://45.138.157.71:5046/api/</value>
             </setting>
         </ScreenRecognition.Desktop.Properties.ProgramSettings>
         <ScreenRecognition.Desktop.Properties.Settings>
